Display link in debug ui, incorporate review feedback